# computer-graphics-ht-1

./: README.md
src/App/: CMakeLists.txt  FractalWidget.cpp  FractalWidget.h  FractalWindow.cpp  FractalWindow.h  MorphingWindow.cpp  MorphingWindow.h  main.cpp
src/App/Shaders/: diffuse.fs  diffuse.vs
src/App/Utils/: Buffers.h  Camera.h  Drawable.h  FpsGuard.cpp  FpsGuard.h
